--- a/controllers/features/config_list.yaml
+++ b/controllers/features/config_list.yaml
@@ -1,7 +1,7 @@
 title: Features
-modelClass: Mavitm\Estate\Models\Feature
-list: $/mavitm/estate/models/feature/columns.yaml
-recordUrl: 'mavitm/estate/features/update/:id'
+modelClass: Awebsome\Realestate\Models\Feature
+list: $/awebsome/realestate/models/feature/columns.yaml
+recordUrl: 'awebsome/realestate/features/update/:id'
 noRecordsMessage: 'backend::lang.list.no_records'
 showSetup: true
 showCheckboxes: true
