--- a/models/feature/fields.yaml
+++ b/models/feature/fields.yaml
@@ -1,10 +1,10 @@
 fields:
     title:
-        label: 'mavitm.estate::lang.features.title'
+        label: 'awebsome.realestate::lang.features.title'
         span: auto
         required: 1
     slug:
-        label: 'mavitm.estate::lang.features.slug'
+        label: 'awebsome.realestate::lang.features.slug'
         span: auto
         required: 1
         preset:
