--- a/models/message/columns.yaml
+++ b/models/message/columns.yaml
@@ -4,34 +4,34 @@
 
 columns:
     realty_id:
-        label: 'mavitm.estate::lang.message.realty'
+        label: 'awebsome.realestate::lang.message.realty'
         type: partial
-        path: ~/plugins/mavitm/estate/models/message/_realty.htm
+        path: ~/plugins/awebsome/realestate/models/message/_realty.htm
         sortable: true
         searchable: true
         clickable: false
     name:
-        label: 'mavitm.estate::lang.message.name'
+        label: 'awebsome.realestate::lang.message.name'
         type: text
         searchable: true
         sortable: true
     email:
-        label: 'mavitm.estate::lang.message.email'
+        label: 'awebsome.realestate::lang.message.email'
         type: text
         searchable: true
         sortable: true
     phone:
-        label: 'mavitm.estate::lang.message.phone'
+        label: 'awebsome.realestate::lang.message.phone'
         type: text
         searchable: true
         sortable: true
     message:
-        label: 'mavitm.estate::lang.message.message'
+        label: 'awebsome.realestate::lang.message.message'
         type: text
         searchable: true
         sortable: true
     created_at:
-        label: 'mavitm.estate::lang.message.created_at'
+        label: 'awebsome.realestate::lang.message.created_at'
         type: datetime
         format: Y-m-d G:i:s
         searchable: true
