--- a/models/realty/fields.yaml
+++ b/models/realty/fields.yaml
@@ -1,13 +1,13 @@
 fields:
 
     title:
-        label: 'mavitm.estate::lang.realty.title'
+        label: 'awebsome.realestate::lang.realty.title'
         span: auto
         required: 1
         type: text
 
     slug:
-        label: 'mavitm.estate::lang.realty.slug'
+        label: 'awebsome.realestate::lang.realty.slug'
         span: auto
         required: 1
         preset:
@@ -16,7 +16,7 @@ fields:
         type: text
 
     category:
-        label: 'mavitm.estate::lang.realty.category'
+        label: 'awebsome.realestate::lang.realty.category'
         nameFrom: title
         descriptionFrom: description
         span: auto
@@ -24,25 +24,25 @@ fields:
         type: relation
 
     price:
-        label: 'mavitm.estate::lang.realty.price'
+        label: 'awebsome.realestate::lang.realty.price'
         span: auto
         required: 1
         type: number
 
     status:
-        label: 'mavitm.estate::lang.realty.status'
+        label: 'awebsome.realestate::lang.realty.status'
         span: auto
         required: 1
         type: dropdown
     
     address:
-        label: 'mavitm.estate::lang.realty.address'
+        label: 'awebsome.realestate::lang.realty.address'
         span: auto
         required: 1
         type: text
 
     published:
-        label: 'mavitm.estate::lang.realty.published'
+        label: 'awebsome.realestate::lang.realty.published'
         span: auto
         default: 1
         type: switch
@@ -51,21 +51,21 @@ tabs:
     fields:
 
         excerpt:
-            label: 'mavitm.estate::lang.realty.excerpt'
+            label: 'awebsome.realestate::lang.realty.excerpt'
             size: tiny
             span: full
             type: textarea
-            tab: 'mavitm.estate::lang.realty.description'
+            tab: 'awebsome.realestate::lang.realty.description'
 
         description:
-            label: 'mavitm.estate::lang.realty.description'
+            label: 'awebsome.realestate::lang.realty.description'
             size: large
             span: full
             type: richeditor
-            tab: 'mavitm.estate::lang.realty.description'
+            tab: 'awebsome.realestate::lang.realty.description'
 
         images:
-            label: 'mavitm.estate::lang.realty.images'
+            label: 'awebsome.realestate::lang.realty.images'
             mode: image
             useCaption: true
             thumbOptions:
@@ -73,22 +73,22 @@ tabs:
                 extension: auto
             span: full
             type: fileupload
-            tab:  'mavitm.estate::lang.realty.images'
+            tab:  'awebsome.realestate::lang.realty.images'
 
         properties:
             type: partial
-            path: $/mavitm/estate/models/realty/_properties.htm
-            tab: 'mavitm.estate::lang.realty.properties'
+            path: $/awebsome/realestate/models/realty/_properties.htm
+            tab: 'awebsome.realestate::lang.realty.properties'
 
         tags:
-            label: 'mavitm.estate::lang.realty.tags'
+            label: 'awebsome.realestate::lang.realty.tags'
             type: taglist
             nameFrom: title
             mode: relation
-            tab: 'mavitm.estate::lang.tags.title'
+            tab: 'awebsome.realestate::lang.tags.title'
 
         features:
-            label: 'mavitm.estate::lang.plugin.features'
+            label: 'awebsome.realestate::lang.plugin.features'
             type: relation
             nameFrom: title
-            tab: 'mavitm.estate::lang.plugin.features'
+            tab: 'awebsome.realestate::lang.plugin.features'
