--- a/models/settings/fields.yaml
+++ b/models/settings/fields.yaml
@@ -1,84 +1,84 @@
 fields:
     section_currency:
-        tab: mavitm.estate::lang.settings.general
-        label: mavitm.estate::lang.settings.menuDescription
+        tab: awebsome.realestate::lang.settings.general
+        label: awebsome.realestate::lang.settings.menuDescription
         type: section
 tabs:
     fields:
         currency:
-            tab: mavitm.estate::lang.settings.general
-            label: mavitm.estate::lang.settings.currency
+            tab: awebsome.realestate::lang.settings.general
+            label: awebsome.realestate::lang.settings.currency
             type: dropdown
             default: eur
 
         show_category_description:
-            tab: mavitm.estate::lang.settings.general
-            label: mavitm.estate::lang.settings.showDescription
+            tab: awebsome.realestate::lang.settings.general
+            label: awebsome.realestate::lang.settings.showDescription
             type: checkbox
             default: 0
             span: auto
 
         show_category_count:
-            tab: mavitm.estate::lang.settings.general
-            label: mavitm.estate::lang.settings.showCount
+            tab: awebsome.realestate::lang.settings.general
+            label: awebsome.realestate::lang.settings.showCount
             type: checkbox
             default: 0
             span: auto
 
         detail_page:
-            tab: mavitm.estate::lang.settings.pages
-            label: mavitm.estate::lang.settings.detail_page
+            tab: awebsome.realestate::lang.settings.pages
+            label: awebsome.realestate::lang.settings.detail_page
             type: dropdown
             default: 404
 
         category_page:
-            tab: mavitm.estate::lang.settings.pages
-            label: mavitm.estate::lang.settings.category_page
+            tab: awebsome.realestate::lang.settings.pages
+            label: awebsome.realestate::lang.settings.category_page
             type: dropdown
             default: 404
             options:
                 getDetailPageOptions
 
         search_page:
-            tab: mavitm.estate::lang.settings.pages
-            label: mavitm.estate::lang.settings.search_page
+            tab: awebsome.realestate::lang.settings.pages
+            label: awebsome.realestate::lang.settings.search_page
             type: dropdown
             default: 404
             options:
                 getDetailPageOptions
 
         maxPerPage:
-              tab: mavitm.estate::lang.settings.pages
-              label: mavitm.estate::lang.settings.maxPerPage
+              tab: awebsome.realestate::lang.settings.pages
+              label: awebsome.realestate::lang.settings.maxPerPage
               type: number
               default: 100
 
         itemsPerPage:
-                tab: mavitm.estate::lang.settings.pages
-                label: mavitm.estate::lang.components.items_per_page
+                tab: awebsome.realestate::lang.settings.pages
+                label: awebsome.realestate::lang.components.items_per_page
                 type: number
                 default: 10
 
         import_bootsrap:
-            tab: mavitm.estate::lang.settings.ui
-            label: mavitm.estate::lang.settings.importBootsrap
+            tab: awebsome.realestate::lang.settings.ui
+            label: awebsome.realestate::lang.settings.importBootsrap
             type: checkbox
             default: 0
 
         import_owl:
-            tab: mavitm.estate::lang.settings.ui
-            label: mavitm.estate::lang.settings.importOwl
+            tab: awebsome.realestate::lang.settings.ui
+            label: awebsome.realestate::lang.settings.importOwl
             type: checkbox
             default: 0
 
         import_fa:
-            tab: mavitm.estate::lang.settings.ui
-            label: mavitm.estate::lang.settings.importFa
+            tab: awebsome.realestate::lang.settings.ui
+            label: awebsome.realestate::lang.settings.importFa
             type: checkbox
             default: 0
 
         import_custom:
-            tab: mavitm.estate::lang.settings.ui
-            label: mavitm.estate::lang.settings.customcss
+            tab: awebsome.realestate::lang.settings.ui
+            label: awebsome.realestate::lang.settings.customcss
             type: checkbox
             default: 0
