--- a/models/tag/fields.yaml
+++ b/models/tag/fields.yaml
@@ -1,5 +1,5 @@
 fields:
     title:
-        label: 'mavitm.estate::lang.tags.title'
+        label: 'awebsome.realestate::lang.tags.title'
         span: auto
         type: text
